--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-app = "rr-perf"  # Change this if you want a different app name
+app = "rr"  # Change this if you want a different app name
 kill_signal = "SIGINT"
 kill_timeout = 5
 processes = []
